objects/QIDC__MDM_Code_Mapping_ims__c.object
<CustomObject>
    <description>This object holds the mapping information between the MDM lookup code and country to the SF picklist values.</description>
    <fields>
        <fullName>QIDC__Field_Mapping_ims__c</fullName>
        <description>The field ID which this code is mapped to.</description>
        <inlineHelpText>The field ID which this code is mapped to.</inlineHelpText>
        <label>Field Mapping</label>
        <referenceTo>QIDC__MDM_Field_Mapping_ims__c</referenceTo>
        <relationshipLabel>MDM Code Mappings</relationshipLabel>
        <relationshipName>MDM_Code_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__LookupType_ims__c</fullName>
        <description>The LookupType ID which this code is mapped to.</description>
        <inlineHelpText>The LookupType ID which this code is mapped to.</inlineHelpText>
        <label>Lookup Type</label>
        <referenceTo>QIDC__MDM_LookupType_ims__c</referenceTo>
        <relationshipLabel>MDM Code Mappings</relationshipLabel>
        <relationshipName>MDM_Code_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__Picklist_Value_ims__c</fullName>
        <description>The Salesforce picklist value that is mapped to the MDM code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Salesforce picklist value that is mapped to the MDM code.</inlineHelpText>
        <label>Picklist Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Record_Type_Name_ims__c</fullName>
        <description>Developer name of the record type to map with the MDM code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Developer name of the record type to map with the MDM code.</inlineHelpText>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>MDM Code Mapping</label>
    <nameField>
        <displayFormat>MDMCM-{000000}</displayFormat>
        <label>MDM Code Mappings</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDM Code Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>